@@ -1,3 +1,12 @@
+2001-05-31 14:30  amalec
+
+	* doc/money/: config.h, config.log, config.status: Removed unneded
+	files
+
+2001-05-31 08:37  amalec
+
+	* ChangeLog, ChangeLogOld: Updated change logs
+
 2001-05-31 08:35  amalec
 
 	* doc/example.lyx: Commit changes to example, get things in synch
